--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <link rel=icon type=x-icon href="h3x.png"/>
 <link rel="shortcut icon" type=x-icon href="h3x.png"/>
 <meta property=og:title content="H3X"/>
-<meta property=og:description content="DozenValues is a political test that aims to map differing political perspectives onto six axes."/>
+<meta property=og:description content="H3X maps your politics on three hexagonal grids for an accuracy never seen before."/>
 <meta property=og:url content="https://quark88.github.io/h3x"/>
-<meta property=og:image content="https://github.com/QUARK88/h3x/blob/master/h3x.png?raw=true"/>
+<meta property=og:image content="https://raw.githubusercontent.com/QUARK88/h3x/main/h3x.png?raw=true"/>
 <meta property=og:type content="Political test"/>
 <meta property=og:locale content="en_US"/>
 </head>
